# caap-tcs

./: .gitignore  README.md  dtcontrol_experiments.py  requirements.txt  run_my_experiments.py
dtcontrol/: benchmark.html  benchmark.json  test.csv  test_config.json
dtcontrol/clean_examples/: bouncing_ball_partitions_16.csv  bouncing_ball_partitions_2.csv  cruise_partitions_2.csv  cruise_partitions_centered.csv  dcdc_boost_converter_partitions_2.csv  dcdc_boost_converter_partitions_centered.csv  oil_pump_partitions_2.csv  oil_pump_partitions_32_config.json  random_walk_partitions_16.csv  random_walk_partitions_2.csv  random_walk_partitions_32.csv  random_walk_partitions_32_config.json  random_walk_partitions_centered.csv
dtcontrol/controllers/: bb_controller_partitions_16.csv  bb_controller_partitions_centered.csv  bb_controller_partitions_centered_config.json  bouncing_ball_partitions_centered.csv  cruise_controller_partitions_16.csv  cruise_controller_partitions_centered.csv  cruise_controller_partitions_centered_config.json  dcdc_boost_converter_partitions_centered_config.json  dcdc_controller_partitions_16.csv  dcdc_controller_partitions_centered.csv  (+6 more)
experiments/: commands.py  utils.py
trees/: loaders.py  minimization.py  minization_timing.py  models.py  nodes.py  utils.py  visualize.py
uppaal_gym/: README.md  pyproject.toml
uppaal_gym/uppaal_gym/: __init__.py
uppaal_gym/uppaal_gym/envs/: __init__.py  bouncing_ball.py  cruise_control.py  dcdc_boost.py  oil_pump.py  password_guessing.py  random_walk.py  spiral.py
viper/: pyproject.toml
(+107 files in other folders)
